# qex

./: .gitignore  API.md  BLOCH_CONTRACT.md  DESIGN.md  README.md  SCHEMA.md  TESTING.md  pyproject.toml  run_tests.sh  test_qex.py  test_qlab.py
.github/workflows/: publish.yml  test.yml
artifacts/: 217906f7-889a-4b99-9c8c-6d1d9b5a1c3a_bloch.html  6ea98392-1f00-48e3-a88a-cd19e5423db5_bloch.html  945b0e0c-afe5-450c-a747-1cd58df8a0cd_bloch.html
qex/: __init__.py  backend.py  bloch.py  demos.py  experiment.py  runner.py  store.py
results/: 217906f7-889a-4b99-9c8c-6d1d9b5a1c3a_rho.npy  945b0e0c-afe5-450c-a747-1cd58df8a0cd_rho.npy
